Bug 1382593: Clean a bit nsImageMap. r=heycam

MozReview-Commit-ID: Htm2OoExJ3T

--HG--
extra : rebase_source : 0d4214ab9e0d98421ebd8f7dbaee8d36342cfe85